# streamlit-azure-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_server  README.md  cicd_priciple.sh  env  push_docker.sh  pyproject.toml  terraform_backend.sh  terraform_deploy.sh  terraform_destroy.sh
.github/actions/: pre-commit.yml
.github/linters/: .yaml-lint.yml
.github/workflows/: deploy.yml  destroy.yml
src/app/: streamlit_app.py  test.py
src/fastapi_server/: output.html  server.py
src/terraform/: main.tf  output.tf  providers.tf  push_docker.sh  variables.tf
