[tool.poetry]
name = "streamlit-azure-demo"
version = "0.1.0"
description = ""
authors = ["Kristina Pianykh <kristinavrnrus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<3.13"
streamlit = "^1.27.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
