[tool.poetry]
name = "streamlit-azure-demo"
version = "0.1.0"
description = ""
authors = ["Kristina Pianykh <kristinavrnrus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<3.13"
streamlit = "^1.27.2"
requests = "^2.31.0"
pyopenssl = "^24.1.0"
certifi = "^2024.2.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.5.0"


[tool.poetry.group.server.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
